fix: corrige rutas CSS (mayúsculas y typo)

--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@ content="poleras personalizadas, polos personalizados, prendas de vestir persona
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
-    <link rel="stylesheet" href="CSS/base/resets.css">
-    <link rel="stylesheet" href="CSS/base/variables.css">
-    <link rel="stylesheet" href="CSS/base/global.css">
+    <link rel="stylesheet" href="CSS/Base/resets.css">
+    <link rel="stylesheet" href="CSS/Base/variables.css">
+    <link rel="stylesheet" href="CSS/Base/global.css">
 
     <link rel="stylesheet" href="CSS/Componets/navbar.css">
     <link rel="stylesheet" href="CSS/Componets/footer.css">
+
 
 
     <link rel="stylesheet" href="CSS/Pages/Index.css"> 
