Fix rutas JS e IMG y ajustes en HTML

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ content="poleras personalizadas, polos personalizados, prendas de vestir persona
 
 
     <!-- Logo -->
-<link rel="icon" href="/favicon.ico?v=2025">
+<link rel="icon" href="/favicon.ico">
 
 
 
@@ -67,10 +67,10 @@ content="poleras personalizadas, polos personalizados, prendas de vestir persona
         <div class="collapse navbar-collapse" id="menu">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-lg-center">
                 <li class="nav-item">
-                    <a class="nav-link" href="./HTML/Productos.html">Productos</a>
+                    <a class="nav-link" href="HTML/Productos.html">Productos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/HTML/Nosotros.html">Nosotros</a>
+                    <a class="nav-link" href="HTML/Nosotros.html">Nosotros</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#contacto">Contacto</a>
@@ -160,14 +160,14 @@ content="poleras personalizadas, polos personalizados, prendas de vestir persona
             Cada colección está diseñada con pasión, cuidando cada detalle para que te sientas único(a) y seguro(a) 
             mientras luces tus outfits favoritos.
           </p>
-          <a href="./HTML/Productos.html" class="btn btn-danger mt-3">Ver Productos</a>
+          <a href="HTML/Productos.html" class="btn btn-danger mt-3">Ver Productos</a>
         </div>
       </div>
 
       <!-- Columna de imagen -->
       <div class="col-md-6">
         <div class="h-100">
-          <img src="/IMG/Card/Card_01.png" alt="Sobre Nosotros" class="img-fluid nosotros-img">
+          <img src="IMG/Card/Card_01.png" alt="Sobre Nosotros" class="img-fluid nosotros-img">
         </div>
       </div>
 
