Fix IMG paths to match real folder names

--- a/HTML/Productos.html
+++ b/HTML/Productos.html
@@ -328,18 +328,18 @@ content="catálogo poleras personalizadas, polos personalizados, pijamas persona
 
 <script src="../JS/config.js"></script>
 
-<script src="../JS/producto-estampado.js"></script>
-<script src="../JS/productos-bordado.js"></script>
-<script src="../JS/producto-personaje.js"></script>
-<script src="../JS/producto-familia-estampado.js"></script>
-<script src="../JS/producto-familia-bordado.js"></script>
-<script src="../JS/producto-conjunto-estampado.js"></script>
-<script src="../JS/producto-conjunto-bordado.js"></script>
-<script src="../JS/producto-polo-estampado.js"></script>
-<script src="../JS/producto-polo-brodado.js"></script>
-<script src="../JS/producto-pijamas.js"></script>
+<script src="../JS/producto-estampado.js"          defer></script>
+<script src="../JS/productos-bordado.js"           defer></script>
+<script src="../JS/producto-personaje.js"          defer></script>
+<script src="../JS/producto-familia-estampado.js"  defer></script>
+<script src="../JS/producto-familia-bordado.js"    defer></script>
+<script src="../JS/producto-conjunto-estampado.js" defer></script>
+<script src="../JS/producto-conjunto-bordado.js"   defer></script>
+<script src="../JS/producto-polo-estampado.js"     defer></script>
+<script src="../JS/producto-polo-brodado.js"       defer></script>
+<script src="../JS/producto-Pijamas.js"            defer></script>
 
-<script src="../JS/carga-productos.js"></script>
+<script src="../JS/carga-productos.js"             defer></script>
 
 
 
