Verificación Google Search Console

--- a/HTML/Nosotros.html
+++ b/HTML/Nosotros.html
@@ -15,7 +15,7 @@
 
 <meta name="robots" content="index, follow">
 
-<link rel="canonical" href="https://gisyl-mood.netlify.app/html/nosotros">
+<link rel="canonical" href="https://bloodcmen-droid.github.io/HTML/Nosotros.html">
 
 
 
