--- a/HTML/Productos.html
+++ b/HTML/Productos.html
@@ -16,7 +16,7 @@ content="catálogo poleras personalizadas, polos personalizados, pijamas persona
 
 <meta name="robots" content="index, follow">
 
-<link rel="canonical" href="https://gisyl-mood.netlify.app/html/productos">
+<link rel="canonical" href="https://bloodcmen-droid.github.io/HTML/Productos.html">
 
 
 
