--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ content="poleras personalizadas, polos personalizados, prendas de vestir persona
   
         <meta name="robots" content="index, follow">
 
-  <link rel="canonical" href="https://gisyl-mood.netlify.app/">
+  <link rel="canonical" href="https://bloodcmen-droid.github.io//">
     <meta name="google-site-verification" content="Yyek2lhjGExXrVimKQVl14fkS15_RGx5djC_AI52XOA" />
    
     <meta name="viewport" content="width=device-width, initial-scale=1">
